GNOME Bugzilla – Bug 404819
Legend doesn't show enough of line for dashed stroke patterns
Last modified: 2007-02-21 14:36:07 UTC
When using dashed or dotted line styles, the legend doesn't show enough of the line to unambiguously distinguish which series corresponds to which line. This is particularly obvious with thicker lines (e.g. 2 pt width), and even more so when the graph is exported to SVG and then printed. Ideally the legend will show a little more than one complete dash pattern of each line, so they may be disambiguated. Some of the patterns are also hard to tell apart even if a complete pattern is shown in the legend, e.g. dash vs. dot/dash. The dot/dash line style is more like "short dash, long dash". The long dash style has gaps that are too big to be useful on long data series (again, for 2pt-thick lines). It would be nice if the dash styles could be made a little "tighter" for more professional-looking graphs.
Hi luke, I agree current dashed lines are not well rendered. What woudl help me is a sample of a graph with good dashed lines rendering, with different dash types and different line witdh. Emmanuel.
Created attachment 82570 [details] a counterexample The third and fourth series lines are indistinguishable in the legend when opening this in Inkscape, and the gaps are so big that important data points may be missed. (Even more so when opening in eog, but I suspect that rendering is more broken there.)
Created attachment 82571 [details] a slightly better example gaps between dashes are smaller, even for thicker lines. (This is by no means ideal, Inkscape won't give me perfect control over dash styles.) The general principles are (1) dashed lines shouldn't have gaps that are too big, (2) the legend should clearly show at least one entire dash pattern (preferably at least two repeats for all dash styles), and (3) dashed line styles should be sufficiently different from each other that they are easy to tell apart on the graph.
Created attachment 82572 [details] The dot-dash line style (middle series) The dot-dash line style is really more "shorter dash, longer dash". It is a little hard to tell apart from other dashed styles. The short dash should be shorter.
Also one more general comment, it would be nice to have a couple more dash styles too for graphs with a lot of series. Thanks!
The situation shoud be better now. I keep this bug open since the legend swatches should behave more nicely for large lines (probably by limiting the width of the sample line in order to show at least 1.5 dash serie).
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report. http://svn.gnome.org/viewcvs/goffice?rev=1677&view=rev
Thanks! You guys are the best.