goffice/graph/gog-renderer.h
@@ -75,7 +75,7 @@ G_BEGIN_DECLS
 /* We need to define an hair line width for the svg and gnome_print renderer. 
  * 0.5 pt is approx. the dot size of a 150 dpi printer, if the plot is 
  * printed at scale 1:1 */
-#define GOG_RENDERER_HAIR_LINE_WIDTH	0.5
+#define GOG_RENDERER_HAIRLINE_WIDTH_PTS	0.5
 
 #define GOG_RENDERER_GRIP_SIZE	4
 
@@ -141,6 +141,8 @@ double gog_renderer_line_size	  	(GogRenderer const *r, double width);
 double gog_renderer_pt2r_x   	  	(GogRenderer const *r, double d);
 double gog_renderer_pt2r_y   	  	(GogRenderer const *r, double d);
 double gog_renderer_pt2r   	  	(GogRenderer const *r, double d);
+
+double gog_renderer_get_hairline_width_pts	(GogRenderer const *r);
 
 /* utilities for cairo/libart transition */
 GogRenderer 	*gog_renderer_new_for_pixbuf 	(GogGraph *graph);
